# adventofcode

./: .eleventy.js  .eleventyignore  .gitignore  README.md  index.njk  package-lock.json  package.json  tag.njk  tailwind.config.js
2020/: 2020-12-1.md  2020-12-10.ipynb  2020-12-10.md  2020-12-11.ipynb  2020-12-11.md  2020-12-12.ipynb  2020-12-12.md  2020-12-13.md  2020-12-14.ipynb  2020-12-14.md  2020-12-15.md  2020-12-16.md  2020-12-2.md  2020-12-3.md  2020-12-4.ipynb  2020-12-4.md  2020-12-5.ipynb  2020-12-5.md  2020-12-6.ipynb  2020-12-6.md  2020-12-7.md  2020-12-8.ipynb  2020-12-8.md  2020-12-9.md  2020.json  day1.html  day1.ipynb  day10.html  day10.ipynb  day11.html  day12.html  day12.ipynb  day13.html  day13.ipynb  day14.html  day14.ipynb  day15.html  day15.ipynb  day16.ipynb  day2.html  (+17 more)
2021/: 2021-12-1.ipynb  2021-12-1.md  2021-12-10.ipynb  2021-12-10.md  2021-12-11.ipynb  2021-12-11.md  2021-12-12.md  2021-12-13.ipynb  2021-12-13.md  2021-12-14.md  2021-12-15.ipynb  2021-12-15.md  (+52 more)
2024/: Cargo.toml  index.md
2024/src/: 2024-12-01.md  2024-12-02.md  2024-12-03.md  2024-12-04.md  2024-12-05.md  2024-12-14.md  2024-12-7.md  2024-12-9.md  day1.rs  day10.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  template.rs  utils.rs
2025/: 2025-12-02.md  2025-12-03.md  2026-12-09-day4.md  Cargo.toml  index.md
2025/src/: 2025-12-02.md  day1.rs  day2.rs  day3.rs  day4.rs  intcode.rs  main.rs  utils.rs
2025/src/intcode/: 2025-11-23-day5.md  2025-11-23.md  2025-12-01.md  intcode2.rs  intcode5.rs  intcodecpu.rs
(+102 files in other folders)
